--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/myVideo.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,11 +17,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
-    img{
-          max-width:100%;
-    }
-    </style>
+
+   
 
   </head>
   <body>
@@ -39,7 +37,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Floyd Orr </a>
+      <a class="navbar-brand" href="#">Floyd Orr, Web Developer </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,17 +54,23 @@
      
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-</nav>
+</nav><html>
+<head>
+
+</head>
+<body>
+
+</body>
+</html>
 <!--underthis video-->
 
 
 
 
 
-
-  <div class ="header-container">
+        <div class ="header-container">
     <div class ="video-container">
-         <video preload = "true" autoplay ="autoplay" loop = "loop" volume ="0" poster = "pic.jpg">
+         <video preload = "true" autoplay ="autoplay" loop = "loop" volume ="0" poster = "PC-Typing.jpg" id ="#video-bg" >
           <source src ="video/PC-Typing.mp4"  type = "video/mp4" >
           <source src ="video/PC-Typing.webm"  type ="video/webm">
           <source src ="video/PC-Typing.ogv"  type ="video/ogg" >
