--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/myVideo.css" rel="stylesheet">
 
+
+  
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -76,9 +79,40 @@
           <source src ="video/PC-Typing.ogv"  type ="video/ogg" >
            
          </video>
-    </div> <!--end of video container -->
-    <h3>   FULL WIDTH HEADER VIDEO TUTORIAL   </h3>
+       </div>
+
+ <form class="form-horizontal Aligner" role="form">
+    <div class="form-group Aligner-item">
+      <label class="control-label col-sm-2 " for="email" >Email:</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control " id="email" placeholder="Enter email.">
+      </div>
+    </div>
+    <div class="form-group Aligner-item">
+      <label class="control-label col-sm-2 " for="pwd">Project:</label>
+      <div class="col-sm-10">          
+        <input type="text" class="form-control " id="pwd" placeholder="Tell me about you web development project.">
+      </div>
+    </div>
+    
+    <div class="form-group Aligner-item">        
+      <div class="col-sm-offset-2 col-sm-10 ">
+        <button type="submit" class="btn btn-default Aligner-item">Submit</button>
+      </div>
+      </form>
+    </div>
+ 
+ 
+
+</div> <!--end flex container-->
+
  </div><!-- end of header container->
+
+
+    </div> <!--end of video container -->
+ 
+  
+  
 
 
 
